--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -67,6 +67,11 @@
 		"NAME": "football club name",
 		"TITLE": "football club management"
 	},
+	"FORGOT_PASSWORD": {
+		"RESET_PASSWORD": "reset password",
+		"SUB_TITLE": "we get it, stuff happens. just enter your email address below and we'll send you a link to reset your password",
+		"TITLE": "forgot your password"
+	},
 	"MEMBER": {
 		"ADDRESS": "address",
 		"AVATAR": "profile image",
