--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -89,5 +89,13 @@
 		"PRINTED_NAME": "printed name",
 		"PRINTED_NUMBER": "printed number",
 		"TITLE": "member management"
-	}
+	},
+    "MATCH_RESULT": {
+        "TITLE": "match result management",
+        "DATE": "competition date", 
+        "RESULT": "result",
+        "ADDRESS": "stadium",
+        "NAME": "name"
+
+    }
 }
