--- a/src/assets/i18n/vn.json
+++ b/src/assets/i18n/vn.json
@@ -45,7 +45,8 @@
 		"SELECT_STATUS": "chọn trạng thái",
 		"STATUS": "trạng thái",
 		"TO_DATE": "đến ngày",
-		"TOTAL_RECORD": "tổng số bản ghi: {{numberOfRecord}}"
+		"TOTAL_RECORD": "tổng số bản ghi: {{numberOfRecord}}",
+        "GO_BACK": "quay lại" 
 	},
 	"DONATE": {
 		"AMOUNT_DONATE": "số tiên donate",
@@ -95,6 +96,15 @@
         "DATE": "thời gian thi đấu",
         "RESULT": "kết quả",
         "ADDRESS": "địa điểm thi đấu",
-        "NAME": "tên trận đấu"
+        "NAME": "tên trận đấu",
+        "SCORE": "tý số",
+        "CREATE": {
+            "TITLE": "thêm mới kết quả trận đấu"
+        }
+    },
+    "SCORER": {
+        "NAME": "người ghi bàn",
+        "GOAL": "bàn thắng",
+        "GOAL_OG": "phản lưới nhà"
     }
 }
