update load i18n file mechanism

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,6 +22,7 @@
 	},
 	"COMMON": {
 		"ACTION": "action",
+        "NOT_FOUND": "not found",
 		"CANCEL": "cancel",
 		"CREATE": "create",
 		"CREATED_BY": "created by",
