--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,6 +22,7 @@
 	},
 	"COMMON": {
 		"ACTION": "action",
+        "AMT": "amount",
         "NOT_FOUND": "not found",
 		"CANCEL": "cancel",
 		"CREATE": "create",
@@ -119,5 +120,9 @@
         "DESC": "description",
         "AMOUNT_PERSON": "amount/person",
         "INPUT_AMOUNT_PERSON": "enter amount/person"
+    },
+    "SPENDING": {
+        "TITLE": "spending management",
+        "DATE": "spent date"
     }
 }
