dev spending page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -123,6 +123,9 @@
     },
     "SPENDING": {
         "TITLE": "spending management",
+        "SPENDER": "spender",
+        "SELECT_SPENDER": "choose a spender",
+        "CREATE_TITLE": "create spending",
         "DATE": "spent date"
     }
 }
