--- a/src/assets/i18n/vn.json
+++ b/src/assets/i18n/vn.json
@@ -22,8 +22,8 @@
 	},
 	"COMMON": {
 		"ACTION": "thao tác",
-        "AMT": "số tiền",
-        "NOT_FOUND": "không tìm thấy",
+		"AMT": "số tiền",
+		"NOT_FOUND": "không tìm thấy",
 		"CANCEL": "hủy bỏ",
 		"CREATE": "thêm mới",
 		"CREATED_BY": "người tạo",
@@ -48,8 +48,8 @@
 		"STATUS": "trạng thái",
 		"TO_DATE": "đến ngày",
 		"TOTAL_RECORD": "tổng số bản ghi: {{numberOfRecord}}",
-        "START_DATE": "ngày bắt đầu",
-        "GO_BACK": "quay lại" 
+		"START_DATE": "ngày bắt đầu",
+		"GO_BACK": "quay lại"
 	},
 	"DONATE": {
 		"AMOUNT_DONATE": "số tiên donate",
@@ -65,7 +65,17 @@
 	"FOOTBALL_CLUB": {
 		"CODE": "mã đội bóng",
 		"CREATE": {
-			"TITLE": "tạo mới đội bóng"
+			"TITLE": "tạo mới đội bóng",
+			"BTN_CREATE": "tạo mới",
+			"ERRORS": {
+				"FC_NAME": {
+					"REQUIRED": "fc name is mandatory",
+					"MAX_LENGTH": "fc name's max length is 255"
+				},
+				"DESCRIPTION": {
+					"MAX_LENGTH": "description's max length is 2000"
+				}
+			}
 		},
 		"INPUT_NAME": "nhập tên đội bóng",
 		"NAME": "tên đội bóng",
@@ -92,39 +102,56 @@
 		"PHONE": "số điện thoại",
 		"PRINTED_NAME": "tên áo",
 		"PRINTED_NUMBER": "số áo",
-		"TITLE": "quản lý thành viên"
+		"TITLE": "quản lý thành viên",
+		"ERRORS": {
+			"FULL_NAME": {
+				"REQUIRED": "Member name is mandatory",
+				"MAX_LENGTH": "Member name's max length is 255"
+			},
+			"PRINTED_NAME": {
+				"MAX_LENGTH": "Name shirt's max length is 255"
+			},
+			"PHONE": {
+				"REQUIRED": "Member phone is mandatory",
+				"MAX_LENGTH": "Member phone's max length is 10",
+				"PATTERN": "Member phone is invalid"
+			},
+			"ADDRESS": {
+				"MAX_LENGTH": "Member address's max length is 2000"
+			}
+		}
 	},
-    "MATCH_RESULT": {
-        "TITLE": "quản lý kết quả trận đấu",
-        "DATE": "thời gian thi đấu",
-        "RESULT": "kết quả",
-        "ADDRESS": "địa điểm thi đấu",
-        "NAME": "tên trận đấu",
-        "SCORE": "tý số",
-        "CREATE": {
-            "TITLE": "thêm mới kết quả trận đấu"
-        }
-    },
-    "SCORER": {
-        "NAME": "người ghi bàn",
-        "GOAL": "bàn thắng",
-        "GOAL_OG": "phản lưới nhà"
-    },
-    "FUNDING": {
-        "TITLE": "quản lý quỹ",
-        "CREATE_TITLE": "thêm mới quỹ",
-        "NAME": "tên quỹ",
-        "INPUT_NAME": "nhập tên quỹ",
-        "DATE": "ngày đóng quỹ",
-        "DESC": "mô tả",
-        "AMOUNT_PERSON": "số tiền/người",
-        "INPUT_AMOUNT_PERSON": "nhập số tiền/người"
-    }, 
-    "SPENDING": {
-        "TITLE": "quản lý chi tiêu",
-        "SPENDER": "người chi tiêu",
-        "SELECT_SPENDER": "chọn người chi tiêu",
-        "CREATE_TITLE": "thêm mới thông tin chi tiêu",
-        "DATE": "ngày chi tiêu"
-    }
+	"MATCH_RESULT": {
+		"TITLE": "quản lý kết quả trận đấu",
+		"DATE": "thời gian thi đấu",
+		"RESULT": "kết quả",
+		"ADDRESS": "địa điểm thi đấu",
+		"NAME": "tên trận đấu",
+		"SCORE": "tý số",
+		"CREATE": {
+			"TITLE": "thêm mới kết quả trận đấu"
+		}
+	},
+	"SCORER": {
+		"NAME": "người ghi bàn",
+		"GOAL": "bàn thắng",
+		"GOAL_OG": "phản lưới nhà"
+	},
+	"FUNDING": {
+		"TITLE": "quản lý quỹ",
+		"CREATE_TITLE": "thêm mới quỹ",
+		"NAME": "tên quỹ",
+		"INPUT_NAME": "nhập tên quỹ",
+		"DATE": "ngày đóng quỹ",
+		"DESC": "mô tả",
+		"AMOUNT_PERSON": "số tiền/người",
+		"INPUT_AMOUNT_PERSON": "nhập số tiền/người"
+	},
+	"SPENDING": {
+		"TITLE": "quản lý chi tiêu",
+		"SPENDER": "người chi tiêu",
+		"SELECT_SPENDER": "chọn người chi tiêu",
+		"CREATE_TITLE": "thêm mới thông tin chi tiêu",
+		"DATE": "ngày chi tiêu"
+	}
 }
