add column totalOfMember in football-club page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -104,6 +104,7 @@
         "TITLE": "forgot your password"
     },
     "MEMBER": {
+        "TEXT": "member",
         "ADDRESS": "address",
         "AVATAR": "profile image",
         "CREATE_MEMBER": "create member",
