--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -176,7 +176,15 @@
         "SCORE": "score",
         "CREATE": {
             "TITLE": "create a match result"
-        }
+        },
+        "STATISTIC": "statistics of competition results",
+        "TOTAL_WIN": "wins",
+        "TOTAL_LOSE": "loses",
+        "TOTAL_DRAWS": "draws",
+        "LOSE_GOAL": "number of goals lost",
+        "TOTAL_GOAL": "number of goals",
+        "GOAL_SCORER": "goal scorer",
+        "WIN_RATE": "win rate"
     },
     "SCORER": {
         "NAME": "scorer",
@@ -195,8 +203,8 @@
         "TOTAL_PAID": "total closed funds",
         "TOTAL_SPENT": "total amount spent",
         "TOTAL_DONATED": "total amount donated",
-        "AVAILABEL": "total remaining funds",
-        "TOTAL_MEMBER_PAID": "The members who have fully paid the fund",
+        "AVAILABLE": "total remaining funds",
+        "TOTAL_MEMBER_PAID": "the members who have fully paid the fund",
         "TOTAL_MEMBER_UNPAID": "member have not paid the fund",
         "TOTAL_AMOUNT_UNPAID": "total amount of missing funds",
         "STATISTIC_FUNDING": "fund statistics"
